// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AclSetListing add a new acltable to an aclset 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div><a href="#/aclset/aclset1_id" aria-current="page" class="lck-sidebar-link router-link-exact-active router-link-active"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 1</span> <span class="status-mark">M</span></a><a href="#/aclset/aclset2_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 2</span>
        <!---->
      </a></div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <div class="p-card p-component p-col-12 p-md-10 p-xl-8 p-mx-auto p-mt-2">
      <!---->
      <div class="p-card-body">
        <div class="p-card-title">
          <div style="position: relative;">
            AclSet 1

            <button type="button" class="delete-aclset-button p-button-sm p-button-danger p-button p-component p-button-icon-only"><span class="pi pi-trash p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
              <!---->
            </button>
          </div>
        </div>
        <!---->
        <div class="p-card-content">
          <div>
            <form class="p-fluid">
              <div class="p-field"><label for="label" class="label-field-required">
                  pages.workspaceAdmin.acl.detail.label
                </label> <input class="p-inputtext p-component p-filled" id="label"> <span class="p-my-2 untouched pristine required"></span></div>
              <div class="p-field"><label for="manager" class="label-field-required">
                  pages.workspaceAdmin.acl.common.manager
                </label>
                <div class="p-inputswitch p-component p-inputswitch-checked" id="manager">
                  <div class="p-hidden-accessible"><input type="checkbox" role="switch" aria-checked="true"></div> <span class="p-inputswitch-slider"></span>
                </div> <span class="p-my-2 untouched pristine required"></span>
              </div>
              <div class="p-field"><label for="chapter">
                  pages.workspaceAdmin.acl.detail.chapter
                </label> <span aria-haspopup="listbox" aria-owns="pv_id_4_list" class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd p-inputwrapper-filled" id="chapter" suggestions="" value="[object Object]"><input type="text" autocomplete="off" role="searchbox" aria-autocomplete="list" aria-controls="pv_id_4_list" placeholder="components.datatable.placeholder" id="chapter" class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"> <!----> <!----> <button type="button" class="p-autocomplete-dropdown p-button p-component p-button-icon-only"><span class="pi pi-chevron-down p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                <!----></button>
                <transition-stub name="p-connected-overlay">
                  <!---->
                </transition-stub>
                </span> <span class="p-my-2 untouched pristine"></span>
              </div>
              <div class="lck-form-footer"><button type="button" class="p-button-text p-button-secondary p-button p-component"><span class="pi pi-times p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.cancel</span>
                  <!---->
                </button> <button type="submit" class="p-button p-component" disabled="disabled"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
                  <!---->
                </button></div>
            </form>
          </div>
          <h3>
            pages.workspaceAdmin.acl.detail.aclTablesExplanation
          </h3>
          <div class="p-mx-auto p-datatable p-component">
            <div>
              <div>
                <!---->
                <!---->
                <!---->
              </div>
              <div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <div class="p-datatable-wrapper">
              <table role="grid">
                <thead class="p-datatable-thead">
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="4" class="" style="width: 16rem; border-width: 0px 1px 1px 0px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableRecord</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="3" class="" style="width: 12rem; border-bottom-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableFilters</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableName</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.create_rows" class="pi pi-plus"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_rows" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_rows" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class="" style="border-right-width: 1px;"><i title="pages.workspaceAdmin.acl.detail.delete_rows" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_filter" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_filter" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.delete_filter" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                </thead>
                <tbody class="p-datatable-tbody">
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: green;"><span class="pi pi-check p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                </tbody>
                <!---->
              </table>
            </div>
            <!---->
            <!---->
            <div class="p-column-resizer-helper" style="display: none;"></div>
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`AclSetListing create a new aclset 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div><a href="#/aclset/aclset1_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 1</span> <span class="status-mark">M</span></a><a href="#/aclset/aclset2_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 2</span>
        <!---->
      </a><a href="#/aclset/aclset3_id," class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>New aclset</span> <span class="status-mark">M</span></a></div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <div class="p-card p-component p-col-12 p-md-10 p-xl-8 p-mx-auto p-mt-2">
      <!---->
      <div class="p-card-body">
        <div class="p-card-title">
          <div style="position: relative;">
            New aclset

            <button type="button" class="delete-aclset-button p-button-sm p-button-danger p-button p-component p-button-icon-only"><span class="pi pi-trash p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
              <!---->
            </button>
          </div>
        </div>
        <!---->
        <div class="p-card-content">
          <div>
            <form class="p-fluid">
              <div class="p-field"><label for="label" class="label-field-required">
                  pages.workspaceAdmin.acl.detail.label
                </label> <input class="p-inputtext p-component p-filled" id="label"> <span class="p-my-2 touched dirty valid validated required changed passed"></span></div>
              <div class="p-field"><label for="manager" class="label-field-required">
                  pages.workspaceAdmin.acl.common.manager
                </label>
                <div class="p-inputswitch p-component p-inputswitch-checked p-focus" id="manager">
                  <div class="p-hidden-accessible"><input type="checkbox" role="switch" aria-checked="true"></div> <span class="p-inputswitch-slider"></span>
                </div> <span class="p-my-2 untouched dirty valid validated required changed passed"></span>
              </div>
              <div class="p-field"><label for="chapter">
                  pages.workspaceAdmin.acl.detail.chapter
                </label> <span aria-haspopup="listbox" aria-owns="pv_id_1_list" class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd" id="chapter" suggestions=""><input type="text" autocomplete="off" role="searchbox" aria-autocomplete="list" aria-controls="pv_id_1_list" placeholder="components.datatable.placeholder" id="chapter" class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"> <!----> <!----> <button type="button" class="p-autocomplete-dropdown p-button p-component p-button-icon-only"><span class="pi pi-chevron-down p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                <!----></button>
                <transition-stub name="p-connected-overlay">
                  <!---->
                </transition-stub>
                </span> <span class="p-my-2 untouched pristine"></span>
              </div>
              <div class="lck-form-footer"><button type="button" class="p-button-text p-button-secondary p-button p-component"><span class="pi pi-times p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.cancel</span>
                  <!---->
                </button> <button class="p-button p-component" type="submit"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
                  <!---->
                </button></div>
            </form>
          </div>
          <h3>
            pages.workspaceAdmin.acl.detail.aclTablesExplanation
          </h3>
          <div class="p-mx-auto p-datatable p-component">
            <div>
              <div>
                <!---->
                <!---->
                <!---->
              </div>
              <div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <div class="p-datatable-wrapper">
              <table role="grid">
                <thead class="p-datatable-thead">
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="4" class="" style="width: 16rem; border-width: 0px 1px 1px 0px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableRecord</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="3" class="" style="width: 12rem; border-bottom-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableFilters</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableName</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.create_rows" class="pi pi-plus"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_rows" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_rows" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class="" style="border-right-width: 1px;"><i title="pages.workspaceAdmin.acl.detail.delete_rows" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_filter" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_filter" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.delete_filter" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                </thead>
                <tbody class="p-datatable-tbody">
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;">Table 1</td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;">Table 2</td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                </tbody>
                <!---->
              </table>
            </div>
            <!---->
            <!---->
            <div class="p-column-resizer-helper" style="display: none;"></div>
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`AclSetListing display a list of aclsets if there are ones 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div><a href="#/aclset/aclset1_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 1</span> <span class="status-mark">M</span></a><a href="#/aclset/aclset2_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 2</span>
        <!---->
      </a></div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <!---->
  </div>
  <!---->
</div>
`;

exports[`AclSetListing display a message if there is no aclsets 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div class="p-p-3">
      pages.workspaceAdmin.acl.listing.noAclSet
    </div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <!---->
  </div>
  <!---->
</div>
`;

exports[`AclSetListing patch an acltable of an aclset 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div><a href="#/aclset/aclset1_id" aria-current="page" class="lck-sidebar-link router-link-exact-active router-link-active"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 1</span> <span class="status-mark">M</span></a><a href="#/aclset/aclset2_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 2</span>
        <!---->
      </a></div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <div class="p-card p-component p-col-12 p-md-10 p-xl-8 p-mx-auto p-mt-2">
      <!---->
      <div class="p-card-body">
        <div class="p-card-title">
          <div style="position: relative;">
            AclSet 1

            <button type="button" class="delete-aclset-button p-button-sm p-button-danger p-button p-component p-button-icon-only"><span class="pi pi-trash p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
              <!---->
            </button>
          </div>
        </div>
        <!---->
        <div class="p-card-content">
          <div>
            <form class="p-fluid">
              <div class="p-field"><label for="label" class="label-field-required">
                  pages.workspaceAdmin.acl.detail.label
                </label> <input class="p-inputtext p-component p-filled" id="label"> <span class="p-my-2 untouched pristine required"></span></div>
              <div class="p-field"><label for="manager" class="label-field-required">
                  pages.workspaceAdmin.acl.common.manager
                </label>
                <div class="p-inputswitch p-component p-inputswitch-checked" id="manager">
                  <div class="p-hidden-accessible"><input type="checkbox" role="switch" aria-checked="true"></div> <span class="p-inputswitch-slider"></span>
                </div> <span class="p-my-2 untouched pristine required"></span>
              </div>
              <div class="p-field"><label for="chapter">
                  pages.workspaceAdmin.acl.detail.chapter
                </label> <span aria-haspopup="listbox" aria-owns="pv_id_5_list" class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd p-inputwrapper-filled" id="chapter" suggestions="" value="[object Object]"><input type="text" autocomplete="off" role="searchbox" aria-autocomplete="list" aria-controls="pv_id_5_list" placeholder="components.datatable.placeholder" id="chapter" class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"> <!----> <!----> <button type="button" class="p-autocomplete-dropdown p-button p-component p-button-icon-only"><span class="pi pi-chevron-down p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                <!----></button>
                <transition-stub name="p-connected-overlay">
                  <!---->
                </transition-stub>
                </span> <span class="p-my-2 untouched pristine"></span>
              </div>
              <div class="lck-form-footer"><button type="button" class="p-button-text p-button-secondary p-button p-component"><span class="pi pi-times p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.cancel</span>
                  <!---->
                </button> <button type="submit" class="p-button p-component" disabled="disabled"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
                  <!---->
                </button></div>
            </form>
          </div>
          <h3>
            pages.workspaceAdmin.acl.detail.aclTablesExplanation
          </h3>
          <div class="p-mx-auto p-datatable p-component">
            <div>
              <div>
                <!---->
                <!---->
                <!---->
              </div>
              <div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <div class="p-datatable-wrapper">
              <table role="grid">
                <thead class="p-datatable-thead">
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="4" class="" style="width: 16rem; border-width: 0px 1px 1px 0px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableRecord</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="3" class="" style="width: 12rem; border-bottom-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableFilters</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableName</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.create_rows" class="pi pi-plus"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_rows" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_rows" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class="" style="border-right-width: 1px;"><i title="pages.workspaceAdmin.acl.detail.delete_rows" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_filter" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_filter" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.delete_filter" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                </thead>
                <tbody class="p-datatable-tbody">
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: green;"><span class="pi pi-check p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                </tbody>
                <!---->
              </table>
            </div>
            <!---->
            <!---->
            <div class="p-column-resizer-helper" style="display: none;"></div>
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`AclSetListing update an aclset 1`] = `
<div class="lck-layout-content">
  <div class="lck-bg-sidebar lck-sidebar">
    <h2 class="p-pl-3 lck-color-title">
      pages.workspaceAdmin.acl.common.title
    </h2>
    <div><a href="#/aclset/aclset1_id" aria-current="page" class="lck-sidebar-link router-link-exact-active router-link-active"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 1 updated</span>
        <!---->
      </a><a href="#/aclset/aclset2_id" class="lck-sidebar-link"><i class="bi lck-sidebar-link-icon bi-shield-lock"></i> <span>AclSet 2</span>
        <!---->
      </a></div> <button type="button" class="p-button-primary p-mx-3 p-button p-component"><span class="pi pi-plus-circle p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.add</span>
      <!---->
    </button>
  </div>
  <div class="lck-page">
    <div class="p-card p-component p-col-12 p-md-10 p-xl-8 p-mx-auto p-mt-2">
      <!---->
      <div class="p-card-body">
        <div class="p-card-title">
          <div style="position: relative;">
            AclSet 1 updated

            <button type="button" class="delete-aclset-button p-button-sm p-button-danger p-button p-component p-button-icon-only"><span class="pi pi-trash p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
              <!---->
            </button>
          </div>
        </div>
        <!---->
        <div class="p-card-content">
          <div>
            <form class="p-fluid">
              <div class="p-field"><label for="label" class="label-field-required">
                  pages.workspaceAdmin.acl.detail.label
                </label> <input class="p-inputtext p-component p-filled" id="label"> <span class="p-my-2 touched dirty valid validated required changed passed"></span></div>
              <div class="p-field"><label for="manager" class="label-field-required">
                  pages.workspaceAdmin.acl.common.manager
                </label>
                <div class="p-inputswitch p-component p-focus" id="manager">
                  <div class="p-hidden-accessible"><input type="checkbox" role="switch"></div> <span class="p-inputswitch-slider"></span>
                </div> <span class="p-my-2 untouched dirty valid validated required changed passed"></span>
              </div>
              <div class="p-field"><label for="chapter">
                  pages.workspaceAdmin.acl.detail.chapter
                </label> <span aria-haspopup="listbox" aria-owns="pv_id_3_list" class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd p-inputwrapper-filled" id="chapter" suggestions="" value="[object Object]"><input type="text" autocomplete="off" role="searchbox" aria-autocomplete="list" aria-controls="pv_id_3_list" placeholder="components.datatable.placeholder" id="chapter" class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"> <!----> <!----> <button type="button" class="p-autocomplete-dropdown p-button p-component p-button-icon-only"><span class="pi pi-chevron-down p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                <!----></button>
                <transition-stub name="p-connected-overlay">
                  <!---->
                </transition-stub>
                </span> <span class="p-my-2 untouched pristine"></span>
              </div>
              <div class="lck-form-footer"><button type="button" class="p-button-text p-button-secondary p-button p-component"><span class="pi pi-times p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.cancel</span>
                  <!---->
                </button> <button class="p-button p-component" type="submit"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
                  <!---->
                </button></div>
            </form>
          </div>
          <h3>
            pages.workspaceAdmin.acl.detail.aclTablesExplanation
          </h3>
          <div class="p-mx-auto p-datatable p-component">
            <div>
              <div>
                <!---->
                <!---->
                <!---->
              </div>
              <div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <div class="p-datatable-wrapper">
              <table role="grid">
                <thead class="p-datatable-thead">
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="4" class="" style="width: 16rem; border-width: 0px 1px 1px 0px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableRecord</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th colspan="3" class="" style="width: 12rem; border-bottom-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableFilters</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                  <tr>
                    <th class="" style="width: 10rem; border-right-width: 1px;">
                      <!----> <span class="p-column-title">pages.workspaceAdmin.acl.detail.aclTableName</span>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.create_rows" class="pi pi-plus"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_rows" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_rows" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class="" style="border-right-width: 1px;"><i title="pages.workspaceAdmin.acl.detail.delete_rows" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.read_filter" class="pi pi-eye"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.update_filter" class="pi pi-pencil"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                    <th class=""><i title="pages.workspaceAdmin.acl.detail.delete_filter" class="pi pi-trash"></i>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </th>
                  </tr>
                </thead>
                <tbody class="p-datatable-tbody">
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                  <!---->
                  <tr class="">
                    <td class="" style="border-right-width: 1px; background-color: white;"></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class=""><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="" style="border-right-width: 1px;"><button type="button" class="p-button p-component p-button-icon-only p-button-text" title="" style="color: red;"><span class="pi pi-ban p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                        <!---->
                      </button></td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                    <td class="">
                      <div class="lck-overlay-panel"><button type="button" class="p-button p-component p-button-icon-only p-button-outlined p-button-text p-button-secondary"><span class="bi bi-file-code p-button-icon"></span> <span class="p-button-label">&nbsp;</span>
                          <!---->
                        </button>
                        <transition-stub name="p-overlaypanel">
                          <!---->
                        </transition-stub>
                      </div>
                    </td>
                  </tr>
                  <!---->
                  <!---->
                </tbody>
                <!---->
              </table>
            </div>
            <!---->
            <!---->
            <div class="p-column-resizer-helper" style="display: none;"></div>
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>
`;
